--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>React Redux Power</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8"/>
+    <title>My React App</title>
 </head>
 <body>
-<div id = "app"></div>
-
-<script type="text/javascript" src="/bundle.js"></script>
+<div id="app"></div>
 </body>
 </html>
